cmake_minimum_required( VERSION 2.8 )
project( hulk_core )

include_directories( include )
add_subdirectory( src )
add_subdirectory( test )
add_subdirectory( benchmark )

install( FILES include/hulk/core/disruptor.h DESTINATION include/hulk/core )
install( FILES include/hulk/core/logger.h DESTINATION include/hulk/core )
install( FILES include/hulk/core/shared_ptr.h DESTINATION include/hulk/core )
install( FILES include/hulk/core/stopwatch.h DESTINATION include/hulk/core )
install( FILES include/hulk/core/tcp.h DESTINATION include/hulk/core )
install( FILES include/hulk/core/thread.h DESTINATION include/hulk/core )

enable_testing()
add_test( test_shared_ptr test/test_shared_ptr )
add_test( test_disruptor test/test_disruptor )
add_test( test_tcp_connect test/test_tcp_connect )
add_test( test_tcp_flood test/test_tcp_flood )
